variables.RunFour.scala.error
Compilation error:
RunFour:10: error: not found: value baggelStomped
    baggleStomped = baggelStomped +1 ;
                    ^